Update other libraries to current versions